# TaskTracker

./: .env  README.md  docker-compose.yaml  pyproject.toml
app/: config.py  database.py  exceptions.py  main.py
app/dao/: base.py
app/docker/: Dockerfile
app/migrations/: env.py
app/migrations/versions/: 7313a00c8ee0_init.py
app/services/: celery_app.py  tasks.py
app/services/send_email/: handler.py
app/services/send_email/templates/: email_template.html
app/tasks/: dao.py  helpers.py  models.py  router.py  schemas.py
app/users/: auth.py  dependencies.py  models.py  router.py  schemas.py
